[package]
name = "iris"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-tpu-client-next = { git = "https://github.com/anza-xyz/agave.git", branch = "master" }
solana-client = { git = "https://github.com/anza-xyz/agave.git", branch = "master" }
solana-transaction-status = { git = "https://github.com/anza-xyz/agave.git", branch = "master" }
solana-rpc-client-api = { git = "https://github.com/anza-xyz/agave.git", branch = "master" }

solana-sdk = "~2.3.0"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.3" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.3", default-features = false }

jsonrpsee = { version = "=0.24.5", features = ["server", "http-client", "macros"] }
tokio = "1.40.0"
env_logger = "0.11.5"
tokio-util = "0.7.12"
dashmap = "5.5.3"
bincode = "1.3.3"
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.91"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
base64 = "0.22.1"
log = "0.4.22"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
futures-util = "0.3.31"
rustls = { version = "0.23.17", features = ["ring"] }
rand = "0.8.5"
arc-swap = "1.7.1"
async-trait = "0.1.88"
once_cell = "1.21.3"
borsh = "1.5.7"
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["default", "grpc-tonic"] }
tracing-opentelemetry = "0.31.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
tracing-log = "0.2.0"
reqwest = "0.12.19"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
