[package]
name = "iris"
version = "0.5.0"
edition = "2021"

[dependencies]
solana-tpu-client-next = { git = "https://github.com/Astralane/agave.git", branch = "reduce-quic-timeouts" }
solana-client = { git = "https://github.com/Astralane/agave.git", branch = "reduce-quic-timeouts" }
solana-transaction-status = { git = "https://github.com/Astralane/agave.git", branch = "reduce-quic-timeouts" }
solana-rpc-client-api = { git = "https://github.com/Astralane/agave.git", branch = "reduce-quic-timeouts" }
agave-transaction-view = { git = "https://github.com/Astralane/agave.git", branch = "reduce-quic-timeouts" }
solana-gossip = { git = "https://github.com/Astralane/agave.git", branch = "reduce-quic-timeouts" }
solana-streamer = { git = "https://github.com/Astralane/agave.git", branch = "reduce-quic-timeouts" }
solana-net-utils = { git = "https://github.com/Astralane/agave.git", branch = "reduce-quic-timeouts" }

solana-sdk = "3.0.0"
solana-commitment-config = "3.0.0"
solana-packet = "3.0.0"

yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v10.0.0+solana.3.0.0" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v10.0.0+solana.3.0.0", default-features = false }

jsonrpsee = { version = "0.26.0", features = ["server", "http-client", "macros"] }
tokio = "1.40.0"
tokio-util = "0.7.12"
dashmap = "6.1.0"
bytes = "1.10.1"
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.91"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
base64 = "0.22.1"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
futures-util = "0.3.31"
rustls = { version = "0.23.17", features = ["ring"] }
rand = "0.8.5"
arc-swap = "1.7.1"
async-trait = "0.1.88"
once_cell = "1.21.3"
borsh = "1.5.7"
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["default", "grpc-tonic"] }
tracing-opentelemetry = "0.31.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
tracing-log = "0.2.0"
reqwest = "0.12.19"
moka = { version = "0.12.10", features = ["future"] }
tower = "0.5.2"
chrono = "0.4.42"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
