[package]
name = "iris"
version = "3.0.0"
edition = "2021"

[dependencies]
solana-tpu-client-next = { version = "4.0.0-beta.0", features = ["agave-unstable-api", "websocket-node-address-service"] }
solana-client = { version = "4.0.0-beta.0" }
solana-transaction-status = { version = "4.0.0-beta.0" }
solana-rpc-client-api = { version = "4.0.0-beta.0" }
agave-transaction-view = { version = "4.0.0-beta.0" }
solana-gossip = { version = "4.0.0-beta.0", features = ["agave-unstable-api"] }
solana-net-utils = { version = "4.0.0-beta.0" }
solana-tls-utils = { version = "4.0.0-beta.0", features = ["agave-unstable-api"] }
solana-streamer = { version = "4.0.0-beta.0", features = ["agave-unstable-api"] }
solana-measure = { version = "4.0.0-beta.0", features = ["agave-unstable-api"] }

solana-sdk = "3.0.0"
solana-commitment-config = "3.0.0"
solana-packet = "3.0.0"

yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v11.0.0+solana.3.1.7" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v11.0.0+solana.3.1.7", default-features = false }

pem = "1.1.1"
jsonrpsee = { version = "0.26.0", features = ["server", "http-client", "macros"] }
tokio = "1.40.0"
tokio-util = "0.7.12"
dashmap = "6.1.0"
clap = { version = "4.6.1", features = ["derive", ] }
bytes = "1.10.1"
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.91"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
base64 = "0.22.1"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.18.1"
futures-util = "0.3.31"
rustls = { version = "0.23.17", features = ["ring"] }
rand = "0.8.5"
arc-swap = "1.7.1"
async-trait = "0.1.88"
borsh = "1.5.7"
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["default", "grpc-tonic"] }
tracing-opentelemetry = "0.31.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
tracing-log = "0.2.0"
reqwest = "0.12.19"
tower = "0.5.2"
chrono = "0.4.42"
mimalloc = "0.1.48"
quinn = { version = "0.11.9", features = ["ring"] }
wincode = { version = "0.4.4", features = ["derive"] }
crossbeam-channel = "0.5.15"
bitflags = { version = "2.11.0" }
core_affinity = "0.8"
cached = "0.58.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
