[package]
name = "rpc-aggregator"
version.workspace = true
edition.workspace = true

[dependencies]
solana-client = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }

crossbeam-channel = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
metrics = {workspace = true}
